...
        android:layout_marginEnd="@dimen/search_bar_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="@dimen/search_recycler_view_top_padding"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
    <androidx.core.widget.ContentLoadingProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="@dimen/search_progress_spinner_size"
            android:layout_height="@dimen/search_progress_spinner_size"
            android:indeterminate="true"
            android:visibility="gone"
            android:id="@+id/loadingSpinner"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
...
