...

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="@dimen/large_fab_size"
            android:layout_height="@dimen/large_fab_size"
            android:id="@+id/exit_button"
            android:src="@drawable/ic_close_black_56dp"
            android:scaleType="center"
            app:elevation="@dimen/double_elevation"
            android:layout_margin="@dimen/double_margin"
            app:layout_constraintBottom_toTopOf="@id/open_in_browser_button"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="@dimen/large_fab_size"
            android:layout_height="@dimen/large_fab_size"
            android:src="@drawable/ic_public_white_56dp"
...
