...
                android:background="@drawable/language_ball"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/owner_name"
                android:singleLine="true"
                android:textSize="@dimen/title_text_size"
                android:layout_margin="@dimen/double_margin"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/sample_repo_name"
                app:layout_constraintTop_toBottomOf="@+id/owner_avatar_view"
...
